--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
-  "dependencies": {
-    "firebase": "^9.7.0"
-  },
-  "name": "capriccioydelizia",
+  "name": "capricci",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel ./login.html",
+    "dev": "parcel ./*.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,5 +16,12 @@
     "url": "https://github.com/paulamorales089/capriccio/issues"
   },
   "homepage": "https://github.com/paulamorales089/capriccio#readme",
+  "dependencies": {
+    "firebase": "^9.7.0",
+    "npm-lifecycle": "^3.1.5"
+  },
+  "devDependencies": {
+    "parcel": "^2.5.0"
+  },
   "description": ""
 }
