--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel ./html/*.html",
+    "build": "parcel build --public-url ./ ./*.html ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
